[package]
name = "dister"
version = "0.1.7"
edition = "2021"
description = "Builds and bundles your wasm web app"
license = "MIT"
repository = "https://github.com/MoAlyousef/dister"
readme = "README.md"
categories = ["command-line-utilities", "wasm", "web-programming"]
keywords = ["wasm", "bundler", "web", "build-tool"]

[dependencies]
toml = "0.5"
tiny_http = "0.11.0"
ascii = "1.0.0"