[package]
name = "dister"
version = "0.1.9"
edition = "2021"
description = "Builds and bundles your wasm web app"
license = "MIT"
repository = "https://github.com/MoAlyousef/dister"
readme = "README.md"
categories = ["command-line-utilities", "wasm", "web-programming"]
keywords = ["wasm", "bundler", "web", "build-tool"]

[dependencies]
livid-cli = "0.1.6"

[profile.release]
opt-level = 3
strip = true